test-package-compiler/src/snapshots/test_package_compiler__generated_tests__import_cycle.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/import_cycle"
---
error: Import cycle
  ┌─ src/one.gleam:1:1
  │
1 │ import one
  │ ^ Imported here

The import statements for these modules form a cycle:

    ┌─────┐
    │     one
    └─────┘
Gleam doesn't support dependency cycles like these, please break the
cycle to continue.
